Adding request specification