@@ -2,4 +2,7 @@
 
 	Project to be used with Test Automation University courses [Java Path]
 
+#### Tips
+
+	Disable gradle warning, adding the following JVM option: DEFAULT_JVM_OPTS='--illegal-access=deny'
 
